stuck on event bug and adding scoring

--- a/assets/Styles/style.css
+++ b/assets/Styles/style.css
@@ -4,6 +4,7 @@ body {
 
   textarea {
     resize: none;
+    height: 100px;
 }
 
   #questionCard {
